--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     </string>
 
     <!-- Strings related to Schedule Activity -->
+    <string name="title_activity_profile">프로필</string>
     <string name="title_activity_schedule">일정</string>
     <string name="title_activity_friend">친구</string>
     <string name="title_activity_settings">설정</string>
