--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,9 @@
     <string name="title_activity_friend">친구</string>
     <string name="title_activity_settings">설정</string>
     <string name="title_activity_event">이벤트</string>
+    <string name="title_activity_event_information">이벤트 정보</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="title_activity_test">TestActivity</string>
-    <string name="section_format">Hello World from section: %1$d</string>
 
 </resources>
