--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="title_activity_event">이벤트</string>
     <string name="title_activity_event_information">이벤트 정보</string>
     <string name="title_activity_add_event">이벤트 추가</string>
+    <string name="title_activity_modify_event">이벤트 수정</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
